# SummerSchoolChallenge

./: .gitignore  LICENSE  README.md  TODO.md  pyproject.toml
notebooks/: dataset_analysis.ipynb  meta_and_image_retrieve.ipynb
scripts/: prepare_env.sh  run_jupyter.sh
src/: active_feature_acquisition.py  combine_predictions_for_agreement_groups.py  create_shoppinglist.py  extract_image_features.py  fungi_network.py  fungi_network_b2.py  fungi_network_b2_3fold_cv_model_training.py  fungi_network_large.py  fungi_network_large_2242shape_best.py  fungi_network_large_2242shape_best_improved.py  fungi_network_large_2242shape_best_improved_latefusion.py  fungi_network_regnet.py  fungi_network_vit_l.py  random_fungi_predictions.py  simple_xgboost_fusion.py  xgboost_fusion_different_feature_configs.py  xgboost_fusion_simple.py
src/_legacy/: train_xgboost_fusion.py
