[project]
name = "multimodaldatachallenge2025"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "albumentations>=2.0.8",
    "clip-anytorch>=2.6.0",
    "faiss-cpu>=1.12.0",
    "fastparquet>=2024.11.0",
    "ftfy>=6.3.1",
    "ipykernel>=6.30.1",
    "matplotlib>=3.9.4",
    "pandas>=2.3.1",
    "pyarrow>=21.0.0",
    "regex>=2025.7.34",
    "scikit-learn>=1.6.1",
    "seaborn>=0.13.2",
    "torch>=2.8.0",
    "torchvision>=0.23.0",
    "tqdm>=4.67.1",
    "xgboost>=2.1.4",
]
